--- a/app/src/main/res/layout/activity_create_bag.xml
+++ b/app/src/main/res/layout/activity_create_bag.xml
@@ -33,6 +33,12 @@
                 android:layout_marginEnd="40dp"
                 android:hint="@string/edit_text_hint_bag_name"
                 android:theme="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
+                app:counterEnabled="true"
+                app:counterMaxLength="20"
+                app:counterOverflowTextAppearance="@style/counterOverride"
+                app:counterOverflowTextColor="@color/colorAccent"
+                app:counterTextAppearance="@style/counterText"
+                app:counterTextColor="@color/colorAccent"
                 app:endIconContentDescription="@string/edit_text_description_bag_name"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -47,6 +53,7 @@
                     android:fontFamily="@font/lato"
                     android:inputType="text"
                     android:singleLine="true"
+                    android:maxLength="20"
                     android:textCursorDrawable="@drawable/shape_cursor_color"
                     android:textSize="16sp"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -100,7 +107,7 @@
                 android:id="@+id/ic_calendar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="126dp"
+                android:layout_marginTop="130dp"
                 android:contentDescription="@string/ic_calendar_description"
                 app:layout_constraintEnd_toStartOf="@+id/textInputLayout_bag_date"
                 app:layout_constraintTop_toTopOf="parent"
@@ -173,10 +180,10 @@
                     android:lines="8"
                     android:maxLines="10"
                     android:minLines="6"
+                    android:maxLength="200"
                     android:paddingTop="24dp"
                     android:scrollbars="vertical"
                     android:singleLine="false"
-
                     android:textCursorDrawable="@drawable/shape_cursor_color"
                     android:textSize="16sp"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -190,7 +197,7 @@
                 android:id="@+id/ic_add_comment"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="282dp"
+                android:layout_marginTop="288dp"
                 android:contentDescription="@string/ic_calendar_description"
                 app:layout_constraintEnd_toStartOf="@+id/textInputLayout_bag_comment"
                 app:layout_constraintTop_toTopOf="parent"
