Edit bag - bag name with counter and limit up to 20 char.

--- a/app/src/main/res/layout/activity_edit_bag.xml
+++ b/app/src/main/res/layout/activity_edit_bag.xml
@@ -32,6 +32,13 @@
                 android:layout_marginEnd="40dp"
                 android:hint="@string/edit_text_hint_bag_name"
                 android:theme="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
+                app:counterEnabled="true"
+                app:counterMaxLength="20"
+                app:counterOverflowTextAppearance="@style/counterOverride"
+                app:counterOverflowTextColor="@color/colorAccent"
+                app:counterTextAppearance="@style/counterText"
+                app:counterTextColor="@color/colorAccent"
+
                 app:endIconContentDescription="@string/edit_text_description_bag_name"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -46,6 +53,7 @@
                     android:fontFamily="@font/lato"
                     android:inputType="text"
                     android:singleLine="true"
+                    android:maxLength="20"
                     android:textCursorDrawable="@drawable/shape_cursor_color"
                     android:textSize="16sp"
                     app:layout_constraintBottom_toBottomOf="parent"
